--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -45,7 +45,7 @@
             padding-top: 59px;
             padding-left: 270px;
         }
-        .centerContnet{
+        .centerContent{
             display: flex;
             align-items: center;
             justify-content: center;
