--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -235,6 +235,21 @@
             top: 12px;
         }
     }
+    .error-check{
+        width: 40px;
+        height: 40px;
+        border-radius: 100%;
+        margin: 10px auto;
+        margin-bottom: 15px;
+        position: relative;
+    img {
+        width: 50px;
+        height: 50px;
+        left: 0px;
+        top: -25px;
+        position: relative;
+    }
+    }
     .message-success{
         font-size: 18px;
     }
