--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -28,6 +28,11 @@
     perfect-scrollbar{
         padding-right: 15px;
     }
+    .header-title{
+        position: absolute;
+        top: 0;
+        left: 10px;    
+    }
     &.fullHeight{
         height: calc(100vh - 62px) !important;
     }   
@@ -131,6 +136,13 @@
                         color: #202124;
                         border: 0;
                     }
+                }
+                &.centerModel{
+                    width: 69.9%;
+                    background-color: #fff;
+                    left: 191px;
+                    text-align: left;
+                    padding-left: 75px;
                 }
             }
         }
