--- a/findly-builder/src/app/shared/kr-modal/kr-modal.component.scss
+++ b/findly-builder/src/app/shared/kr-modal/kr-modal.component.scss
@@ -1,5 +1,8 @@
 @import '../../scss/variables/variables.scss';
-
+@keyframes example {
+    0%   {transform: scale(0.5)}
+    100% {transform: scale(1)}
+  }
 .kr-modal {
     /*--Full Modal Basic Styles Starts Here--*/
     text-align: center;
@@ -11,6 +14,86 @@
         height: 100%;
         vertical-align: middle;
         margin-right: -4px;
+    }
+    &.kr-center{
+        animation-name: example;
+        animation-duration: 0.3s;
+        .modal-dialog{
+            max-width: 70% !important;
+            margin: 0 !important;
+            height: 100%;
+            &.zIndex99999{
+                z-index: 99999;
+            }
+            .modal-content{
+                border-radius: 0;
+                height: 100%;
+                overflow: hidden;
+                .full-page-header{
+                    display: block;
+                    height: 50px;
+                    background-color: $whiteColor;
+                    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2);
+                    z-index: 1;
+                    position: relative;
+                    .back{
+                        margin-left: 25px;
+                        margin-top: 18px;
+                        color: $secondaryColor;
+                        cursor: pointer;
+                    }
+                    &.row{
+                        display: flex;
+                        margin: 0;
+                        .screenFreeze{
+                            pointer-events: none;
+                            opacity:0.5;
+                        }
+                        .left{
+                            padding-top: 12px;
+                            max-width: 100%;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                            white-space: nowrap;
+                            .arrow{
+                                cursor: pointer;
+                                transform: rotate(180deg);
+                                position: relative;
+                                top: -1px;
+                            }
+                        }
+                        .right{
+                            text-align: right;
+                            padding-top: 6px;
+                            .kr-btn-greenTransparent{
+                                width: 80px;
+                            }
+                            .kr-btn-primary{
+                                margin: 0 15px;
+                                width: 80px;
+                            }
+                            .gHelp{
+                                font-size: $font-md;
+                                font-weight: normal;
+                                color: $secondaryColor;
+                                cursor: pointer;
+                                .gHelpIcon{
+                                    margin-right: 5px;
+                                    opacity: .6;
+                                }
+                                &:hover{
+                                    color: $primaryColor;
+                                    .gHelpIcon{
+                                        margin-right: 5px;
+                                        opacity: 1;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
     &.kr-full{
         .modal-dialog{
